--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
       <div class="box">
         <h1 class="heading">about us</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, obcaecati id. Ut laborum recusandae
-          quibusdam id atque odit quia ipsam!</p>
+          quibusdam id atque modit muia ipsam!</p>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, obcaecati id. Ut laborum recusandae
-          quibusdam id atque odit quia ipsam!</p>
+          quibusdam id atque nodit nuia ipsam!</p>
 
       </div>
 
